fix text overflow et des animations des cartes des menus

--- a/css/style.css
+++ b/css/style.css
@@ -209,11 +209,17 @@ color:black
   width: 100%;
 }
 
-
 .menu-restaurant .card-body .text-card {
   padding:9px 6px 6px 10px;
   padding-bottom:5px;
   width: 100%;
+}
+
+.menu-restaurant .card:hover .card-body .text-card .text p{
+  width :230px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .menu-restaurant .card-body .prix {
@@ -237,25 +243,32 @@ color:black
 }
 
 .card-checkmark{
-  display: none;
+opacity: 0;
   width:0%;
   color: white;
-  transition: 0.4s;
+  border-radius: 0px 15px 15px 0px;
+  height: 60px;
+  width:8%;
+  transition:all 0.5s ease ;
 }
 
 .card:hover .card-checkmark{
-  display:block;
+  opacity: 1;
   background-color: #99E2D0;
   border-radius: 0px 15px 15px 0px;
   height: 60px;
   width:8%;
+  transition:all 0.5s ease ;
 }
 
 .card:hover .card-checkmark .checkmark{
-  animation: spin-animation 0.2s ;  
+  display: block;
+  animation: spin-animation 0.2s ; 
+  animation-delay: 0.3s;
 }
 
 .card-checkmark .checkmark{
+  display: none;
   padding: 20px 18px 20px 18px;
 }
 
@@ -654,6 +667,7 @@ footer a:hover {
 
   .card-checkmark .checkmark{
     padding: 20px 15px 20px 15px;
+    transition: 0.4s;
   }
 
   footer {
